RESOLVED FIXED79844
Some run-javascriptcore-tests broken for 32-bit debug
https://bugs.webkit.org/show_bug.cgi?id=79844
Summary Some run-javascriptcore-tests broken for 32-bit debug
Mark Hahnenberg
Reported 2012-02-28 16:32:10 PST
Looks like something related to Filip's recent change to strict equality. ecma_2/Statements/switch-004.js ecma_3/RegExp/15.10.2-1.js ecma_3/RegExp/15.10.6.2-2.js ecma_3/RegExp/octal-001.js ecma_3/RegExp/octal-002.js ecma_3/RegExp/perlstress-001.js ecma_3/RegExp/regress-100199.js ecma_3/RegExp/regress-105972.js ecma_3/RegExp/regress-165353.js ecma_3/RegExp/regress-187133.js ecma_3/RegExp/regress-191479.js ecma_3/RegExp/regress-209919.js ecma_3/RegExp/regress-57572.js ecma_3/RegExp/regress-67773.js ecma_3/RegExp/regress-72964.js ecma_3/RegExp/regress-78156.js ecma_3/RegExp/regress-87231.js Backtrace of ecma_2/Statements/switch-004.js: ASSERTION FAILED: (src1.isCell() && src2.isCell()) || src1.isDouble() || src2.isDouble() /Volumes/Data/WebKit-true-clean/Source/JavaScriptCore/jit/JITStubs.cpp(3299) : EncodedJSValue JSC::cti_op_stricteq(void **) 1 0x28662b cti_op_stricteq 2 0x288670 jscGeneratedNativeCode 3 0x23d826 JSC::JITCode::execute(JSC::RegisterFile*, JSC::ExecState*, JSC::JSGlobalData*) 4 0x239983 JSC::Interpreter::execute(JSC::ProgramExecutable*, JSC::ExecState*, JSC::ScopeChainNode*, JSC::JSObject*) 5 0x11162b JSC::evaluate(JSC::ExecState*, JSC::ScopeChainNode*, JSC::SourceCode const&, JSC::JSValue, JSC::JSValue*) 6 0x379f0 _ZL14runWithScriptsP12GlobalObjectRKN3WTF6VectorI6ScriptLm0EEEb 7 0x372f6 jscmain(int, char**, JSC::JSGlobalData*) 8 0x371fc main 9 0x37045 start
Attachments
Filip Pizlo
Comment 1 2012-02-28 17:10:37 PST
*** Bug 79848 has been marked as a duplicate of this bug. ***
Filip Pizlo
Comment 2 2012-02-28 17:13:33 PST
Note You need to log in before you can comment on or make changes to this bug.